# 16_november_testing

./: pyproject.toml
src/: calculate_daiscont.py  logic1.py
tests/: conftest.py  test_calculate_dascont.py  test_logic1.py
